// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ShowMore should hide when the number of items is equal to the total 1`] = `
<TestProvider>
  <Provider router={{...}} app={{...}} history={{...}}>
    <WithStyles(inject-ShowMore-with-app) model={{...}}>
      <inject-ShowMore-with-app model={{...}} classes={{...}}>
        <ShowMore model={{...}} classes={{...}} app={{...}} Loading={[Function: Loading]} offset={100} />
      </inject-ShowMore-with-app>
    </WithStyles(inject-ShowMore-with-app)>
  </Provider>
</TestProvider>
`;

exports[`ShowMore should hide when the page is equal to the numberOfPages - 1 1`] = `
<TestProvider>
  <Provider router={{...}} app={{...}} history={{...}}>
    <WithStyles(inject-ShowMore-with-app) model={{...}}>
      <inject-ShowMore-with-app model={{...}} classes={{...}}>
        <ShowMore model={{...}} classes={{...}} app={{...}} Loading={[Function: Loading]} offset={100} />
      </inject-ShowMore-with-app>
    </WithStyles(inject-ShowMore-with-app)>
  </Provider>
</TestProvider>
`;

exports[`ShowMore should render 1`] = `
<TestProvider>
  <Provider router={{...}} app={{...}} history={{...}}>
    <WithStyles(inject-ShowMore-with-app) model={{...}}>
      <inject-ShowMore-with-app model={{...}} classes={{...}}>
        <ShowMore model={{...}} classes={{...}} app={{...}} Loading={[Function: Loading]} offset={100}>
          <WithStyles(Button) variant="raised" color="primary" href={{...}} className="RSFShowMore-root-1" onClick={[Function: res]}>
            <Button variant="raised" color="primary" href={{...}} className="RSFShowMore-root-1" onClick={[Function: res]} classes={{...}} component="button" disabled={false} disableFocusRipple={false} fullWidth={false} mini={false} size="medium" type="button">
              <WithStyles(ButtonBase) className="MuiButton-root-3 MuiButton-contained-14 MuiButton-containedPrimary-15 MuiButton-raised-17 MuiButton-raisedPrimary-18 RSFShowMore-root-1" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-22" href={{...}} onClick={[Function: res]} component="button" type="button">
                <ButtonBase className="MuiButton-root-3 MuiButton-contained-14 MuiButton-containedPrimary-15 MuiButton-raised-17 MuiButton-raisedPrimary-18 RSFShowMore-root-1" disabled={false} focusRipple={true} focusVisibleClassName="MuiButton-focusVisible-22" href={{...}} onClick={[Function: res]} component="button" type="button" classes={{...}} centerRipple={false} disableRipple={false} disableTouchRipple={false} tabIndex="0">
                  <button className="MuiButtonBase-root-29 MuiButton-root-3 MuiButton-contained-14 MuiButton-containedPrimary-15 MuiButton-raised-17 MuiButton-raisedPrimary-18 RSFShowMore-root-1" onBlur={[Function]} onFocus={[Function]} onKeyDown={[Function]} onKeyUp={[Function]} onMouseDown={[Function]} onMouseLeave={[Function]} onMouseUp={[Function]} onTouchEnd={[Function]} onTouchMove={[Function]} onTouchStart={[Function]} tabIndex="0" type="button" disabled={false} href={{...}} onClick={[Function: res]}>
                    <span className="MuiButton-label-4">
                      Show More
                    </span>
                    <NoSsr defer={false} fallback={{...}}>
                      <WithStyles(TouchRipple) innerRef={[Function]} center={false}>
                        <TouchRipple center={false} classes={{...}}>
                          <TransitionGroup component="span" enter={true} exit={true} className="MuiTouchRipple-root-32" childFactory={[Function: childFactory]}>
                            <span className="MuiTouchRipple-root-32" />
                          </TransitionGroup>
                        </TouchRipple>
                      </WithStyles(TouchRipple)>
                    </NoSsr>
                  </button>
                </ButtonBase>
              </WithStyles(ButtonBase)>
            </Button>
          </WithStyles(Button)>
        </ShowMore>
      </inject-ShowMore-with-app>
    </WithStyles(inject-ShowMore-with-app)>
  </Provider>
</TestProvider>
`;

exports[`ShowMore should show loading when loadingMore is true 1`] = `
<TestProvider>
  <Provider router={{...}} app={{...}} history={{...}}>
    <WithStyles(inject-ShowMore-with-app) model={{...}}>
      <inject-ShowMore-with-app model={{...}} classes={{...}}>
        <ShowMore model={{...}} classes={{...}} app={{...}} Loading={[Function: Loading]} offset={100}>
          <div className="RSFShowMore-loading-2 RSFShowMore-root-1">
            <Loading>
              <WithStyles(CircularProgress)>
                <CircularProgress classes={{...}} color="primary" disableShrink={false} size={40} thickness={3.6} value={0} variant="indeterminate">
                  <div className="MuiCircularProgress-root-39 MuiCircularProgress-colorPrimary-42 MuiCircularProgress-indeterminate-41" style={{...}} role="progressbar">
                    <svg className="MuiCircularProgress-svg-44" viewBox="22 22 44 44">
                      <circle className="MuiCircularProgress-circle-45 MuiCircularProgress-circleIndeterminate-47" style={{...}} cx={44} cy={44} r={20.2} fill="none" strokeWidth={3.6} />
                    </svg>
                  </div>
                </CircularProgress>
              </WithStyles(CircularProgress)>
            </Loading>
          </div>
        </ShowMore>
      </inject-ShowMore-with-app>
    </WithStyles(inject-ShowMore-with-app)>
  </Provider>
</TestProvider>
`;

exports[`ShowMore should show the loading spinner even when there are no more records 1`] = `
<TestProvider>
  <Provider router={{...}} app={{...}} history={{...}}>
    <WithStyles(inject-ShowMore-with-app) model={{...}}>
      <inject-ShowMore-with-app model={{...}} classes={{...}}>
        <ShowMore model={{...}} classes={{...}} app={{...}} Loading={[Function: Loading]} offset={100}>
          <div className="RSFShowMore-loading-2 RSFShowMore-root-1">
            <Loading>
              <WithStyles(CircularProgress)>
                <CircularProgress classes={{...}} color="primary" disableShrink={false} size={40} thickness={3.6} value={0} variant="indeterminate">
                  <div className="MuiCircularProgress-root-39 MuiCircularProgress-colorPrimary-42 MuiCircularProgress-indeterminate-41" style={{...}} role="progressbar">
                    <svg className="MuiCircularProgress-svg-44" viewBox="22 22 44 44">
                      <circle className="MuiCircularProgress-circle-45 MuiCircularProgress-circleIndeterminate-47" style={{...}} cx={44} cy={44} r={20.2} fill="none" strokeWidth={3.6} />
                    </svg>
                  </div>
                </CircularProgress>
              </WithStyles(CircularProgress)>
            </Loading>
          </div>
        </ShowMore>
      </inject-ShowMore-with-app>
    </WithStyles(inject-ShowMore-with-app)>
  </Provider>
</TestProvider>
`;
